@startuml ECS_Architecture
!theme plain

package "Core ECS" {
    abstract class ISystem {
        +Update(World&, float): void = 0
    }
    
    class Entity {
        -id: EntityID
        -components: map<type, Component*>
        +GetComponent<T>(): T*
        +AddComponent<T>(): void
        +HasComponent<T>(): bool
        +GetID(): EntityID
    }
    
    abstract class Component {
        +GetType(): type_info
        +~Component(): virtual
    }
    
    class World {
        -entities: unordered_map<EntityID, Entity*>
        -systems: vector<ISystem*>
        +CreateEntity(): Entity*
        +DestroyEntity(EntityID): void
        +GetEntity(EntityID): Entity*
        +GetEntitiesWithComponent<T>(): vector<Entity*>
        +Update(float): void
    }
}

package "Jerarquía Componentes" {
    note right
    Los componentes específicos heredan de Component
    y son contenedores de datos puros sin lógica
    end note
}

package "Relaciones ECS" {
    Entity "1" *-- "*" Component : tiene >
    World "1" *-- "*" Entity : gestiona >
    ISystem --> World : actualiza >
    note bottom of ISystem
    Cada sistema itera sobre entidades
    con los componentes que necesita
    end note
}

@enduml
